--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="row">
 
           <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/logo.jpg");' data-aos="zoom-in" data-aos-delay="100">
-            <a href="assets/img/Video for Website.mp4" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="assets/img/Untitled.mp4" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
