--- a/MHC.html
+++ b/MHC.html
@@ -160,24 +160,15 @@
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
         <div class="container" data-aos="zoom-in">
-
-            <div class="text-center">
-                <h3>MENTAL HEALTH IS HEALTH</h3>
-                <p>
-                    Universal mental healthcare is an initiative that aims to ensure everyone has access to adequate
-                    mental health services and support. </p>
-                <P>What can you do?
-
-                    Mental health matters, we can all take small steps to make a difference and stand up against the
-                    stigma of mental
-                    health. By signing this petition you will add your voice to the movement and aid our goal to make
-                    sure mental health is
-                    just as important as physical health. </P>
-                <a class="cta-btn" href="https://forms.gle/nTVfzw9g54wmojW18">Sign our petetion</a>
-            </div>
-
+  
+          <div class="text-center">
+            <h3>FOLLOW RAISE YOUR VOICE</h3>
+            <p> Want to learn more about Raise Your Voice and our Initiatives? Follow us on Instagram!</p>
+            <a class="cta-btn" href="https://www.instagram.com/raiseyourvoice_otu/">Follow Us</a>
+          </div>
+  
         </div>
-    </section><!-- End Cta Section -->
+      </section><!-- End Cta Section -->
 
 
     <!-- ======= Services Section ======= -->
