--- a/student-tuition.html
+++ b/student-tuition.html
@@ -162,24 +162,15 @@
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
         <div class="container" data-aos="zoom-in">
-
-            <div class="text-center">
-                <h3>MENTAL HEALTH IS HEALTH</h3>
-                <p>
-                    Universal mental healthcare is an initiative that aims to ensure everyone has access to adequate
-                    mental health services and support. </p>
-                <P>What can you do?
-
-                    Mental health matters, we can all take small steps to make a difference and stand up against the
-                    stigma of mental
-                    health. By signing this petition you will add your voice to the movement and aid our goal to make
-                    sure mental health is
-                    just as important as physical health. </P>
-                <a class="cta-btn" href="https://forms.gle/nTVfzw9g54wmojW18">Sign our petetion</a>
-            </div>
-
+  
+          <div class="text-center">
+            <h3>FOLLOW RAISE YOUR VOICE</h3>
+            <p> Want to learn more about Raise Your Voice and our Initiatives? Follow us on Instagram!</p>
+            <a class="cta-btn" href="https://www.instagram.com/raiseyourvoice_otu/">Follow Us</a>
+          </div>
+  
         </div>
-    </section><!-- End Cta Section -->
+      </section><!-- End Cta Section -->
 
 
     <!-- ======= Services Section ======= -->
@@ -196,44 +187,30 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
                     data-aos-delay="200">
                     <div class="icon-box">
-                        <img class="icon" src="assets/img/campaign-mhc/resource1.jpg">
-                        <h4><a href="https://www.crestbd.ca/tools/">Canadian Mental Health Association. Fast Facts about
-                                Mental Illness</a>
+                        <img class="icon" src="assets/img/pexels-rfstudio-3059749.jpg">
+                        <h4><a href="https://cfs-fcee.ca/campaigns/fight-the-fees/">Fight the Fees
+                                </a>
                         </h4>
-                        <p>Overview of mental health in Canada</p>
+                        <p>Overview of Student Tuition costs and Debt Crisis</p>
                         <br>
                         <br>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
-                    data-aos-delay="300">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+                    data-aos-delay="200">
                     <div class="icon-box">
-                        <img class="icon" src="assets/img/campaign-mhc/resource2.jpg">
-                        <h4><a
-                                href="https://www.cafconnection.ca/getmedia/66d319f3-6719-4022-affb-8c659b3518f2/compressed_Mental-Health-Caregiver-Guide_E.aspxf">
-                                Hall, V. (2017). Clara Hughes delivers inspiring talk on mental illness while struggling
-                                herself: 'I'm still not out of it'.</a></h4>
-                        <p>The six–time Olympic medallist in cycling and speed skating earned a standing ovation,
-                            leaving some audience members in tears, with a frank discussion about her history of
-                            depression and an emotional plea to eliminate the stigma surrounding mental illness.</p><Br>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
-                    data-aos-delay="300">
-                    <div class="icon-box">
-                        <img class="icon" src="assets/img/campaign-mhc/resource3.jpg">
-                        <h4><a href="https://www.youtube.com/watch?v=66cYcSak6nE&feature=youtu.be">Mate, G. The Power of
-                                Addiction and The Addiction of Power. Tedx Talks</a></h4>
-                        <p>From the lack of love to the desire to escape oneself, from susceptibility of the being to
-                            interior power -- nothing escapes. And he risks a generic and generous prescription: "Find
-                            your nature and be nice to yourself."</p>
+                        <img class="icon" src="assets/img/Stu-tuitio-hero.jpg">
+                        <h4><a href="https://www.cbc.ca/news/politics/statscan-university-tuition-1.4276740">University Tuition Fee Increase in Canada
+                                </a>
+                        </h4>
+                        <p>This article goes over the increase in tuition at Canadian Post-Secondary Institutions</p>
                         <br>
-
+                        <br>
                     </div>
                 </div>
+
+               
 
 
 
