--- a/MHC.html
+++ b/MHC.html
@@ -113,7 +113,7 @@
                 <div class="container" data-aos="fade-up">
 
                     <div class="section-title">
-                        <p style="font-size: 28px; font-weight: 600;">Why is meantal Health Important?</p>
+                        <p style="font-size: 28px; font-weight: 600;">Why is Mental Health Important?</p>
                     </div>
 
                     <div class="row content">
