--- a/index.html
+++ b/index.html
@@ -368,9 +368,24 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
+                  <img src="assets/img/Image from iOS.jpg" class="testimonial-img" alt="">
+                  <h3>Mary Cae</h3>
+                  <h4>Marketing</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    I joined RYV to simply RAISE YOUR VOICE, especially the voice of the youth in our community. Sounds very corny but true. We all have a voice that needs to be heard! RYV promotes awareness on important topics that I strongly advocate for, such as political literacy and mental health.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
                   <img src="assets/img/team4.png" class="testimonial-img" alt="">
                   <h3>Amber Ruetz</h3>
-                  <h4>Entrepreneur</h4>
+                  <h4>Marketing</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     I joined Raise Your Voice to learn more about social issues and advocate for those around me for a better future.
