--- a/Advocate.html
+++ b/Advocate.html
@@ -295,7 +295,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box">
                   <img class="icon" src="assets/img/civic.jpg">
-                  <h4><a href="Political.html">Civic Responsibility</a></h4>
+                  <h4><a href="political.html">Civic Responsibility</a></h4>
                   <p>Click here to learn more about Civic Responsibility</p>
                 </div>
               </div>
