--- a/Government.html
+++ b/Government.html
@@ -181,7 +181,7 @@
             <div class="icon-box">
               <img class="icon" src="assets/img/syrveryimg.jpg">
               <h4><a href="https://padlet.com/OTSL/16days">Pledge</a></h4>
-              <p>Activism agaisnt gender based violence</p>
+              <p>Activism against gender based violence</p>
             </div>
           </div>
 
@@ -189,7 +189,7 @@
             <div class="icon-box">
               <img class="icon" src="assets/img/pexels-august-de-richelieu-4427610.jpg">
               <h4><a href="https://www.ohchr.org/Documents/Issues/Women/ViolenceAgainstWomeninPoliticsReport.pdf">Women in Politics</a></h4>
-              <p>Learn more about violence agaisnt women in politics.</p>
+              <p>Learn more about violence against women in politics.</p>
             </div>
           </div>
 
