--- a/political.html
+++ b/political.html
@@ -180,7 +180,7 @@
             <div class="icon-box">
               <img class="icon" src="assets/img/syrveryimg.jpg">
               <h4><a href="https://padlet.com/OTSL/16days">Pledge</a></h4>
-              <p>Activism agaisnt gender based violence</p>
+              <p>Activism against gender based violence</p>
             </div>
           </div>
 
